# lambda-requests-s3

./: .env.example  .gitignore  main.py  makefile  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci-cd.yml
infrastructure/aws/common/api-gateway/: main.tf  output.tf  variables.tf
infrastructure/aws/common/iam/: main.tf  outputs.tf  variables.tf
infrastructure/aws/common/lambda/: main.tf  output.tf  variables.tf
infrastructure/aws/common/s3/: main.tf  output.tf
infrastructure/aws/dev/: config.tf  main.tf  output.tf
infrastructure/aws/lambda_template/: lambda_function.py
infrastructure/aws/prd/: config.tf  main.tf  output.tf
infrastructure/aws/stg/: config.tf  main.tf  output.tf
src/: get_data.py  lambda_function.py  requests_downloader.py  s3.py
src/app/: __init__.py  downloader.py  lambda_function.py  main.py  s3_uploader.py  uploader.py
src/app/download/: __init__.py  downloader.py  requests_downloader.py
src/app/upload/: __init__.py  s3_uploader.py  uploader.py
