[tool.poetry]
name = "lambda-requests-s3"
version = "0.1.0"
description = ""
authors = ["Roberto Madinyá <roberto.madinya@ioet.com>"]
readme = "README.md"
packages = [{include = "lambda_requests_s3"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.28.30"
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
